# DLP_init

./: .gitignore  README.md  README_1.md  README_2.md  foo2.py  interrupted_results.json  interrupted_results.xlsx  main_5_2.py  main_5_3.py  main_5_5.py  main_6_1.py  main_7.py  main_7_1.py  main_7_2.py  main_8.py  main_8_1.py  ppt.md  pyproject.toml  requirements.txt  results.xlsx  results_1.xlsx  results_processing.csv  results_processing_1.csv  results_简化版.xlsx  sensitive_config.yaml  sensitive_config_1.yaml
0_sample_extract/: detect_sensitiveFile.py  detect_sensitiveFile_1.py  detect_sensitiveFile_2.py  main_3_ok.py
0_sample_extract/old/: detect_sensitiveFile_5.py  加到 foo_2里.py
1_train/: Bert_v2.2.py  main_10.py  main_11.py  main_9.py  main_9_1.py  main_9_2.py  run_pth.py
2_ai_juge/: FileSignatureDetector_1.py  FileSignatureDetector_2.py  main_10.py  main_11.py
ai/: detect_sensitiveFile_2.py  detect_sensitiveFile_4.py  foo.py  foo_2.py  foo_3.py
test/: foo2.py  foo2_2.py  foo3.py  main_2_ok.py  main_8_ok.py  results.xlsx  results_processing.csv
test/old/: foo.py  foo2_3.py  foo4.py  foo5.py  main.py  main_5.py  main_5_1.py  main_6.py  main_6_2.py
test1/: interrupted_results.json  interrupted_results.xlsx  main.py  main_4.py  main_5.py  main_5_1.py  main_5_2.py  main_5_3.py  main_5_4.py  main_5_5.py  main_6_c.py  results.json  results.xlsx  results_processing.csv  results_processing_1.xlsx  results_processing_2.csv  results_processing_3.csv  sensitive_config.yaml  show_detail.py  show_detail_1.py
words/: sensitive_config.yaml
