[project]
name = "dlp-init"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx>=0.2.4",
    "filetype>=1.2.0",
    "jieba>=0.42.1",
    "langdetect>=1.0.9",
    "markitdown>=0.0.1a5",
    "nltk>=3.9.1",
    "olefile>=0.47",
    "patool>=4.0.0",
    "pdfplumber>=0.11.5",
    "psutil>=7.0.0",
    "pypandoc>=1.15",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.50.1",
]
